...
                            Icons.search,
                            color: Colors.grey.shade500,
                            size: 20,
                          ),
                          const SizedBox(width: 10),
                          Text(
                            'Buscar equipo médico',
                            style: TextStyle(
                              color: Colors.grey.shade500,
                              fontSize: 14,
                            ),
                          ),
                        ],
...
